--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "DANUWA-MD",
-  "description": "Javascript WhatsApp bot made by Danuka Dissanayake",
+  "name": "HUNTER-MD",
+  "description": "Javascript WhatsApp bot made by ADMIN HUNTER",
   "logo": "https://github.com/DANUWA-MD/DANUWA-MD/blob/main/images/DANUWA-MD.png?raw=true",
-  "keywords": ["DANUWA-MD"],
+  "keywords": ["HUNTER-MD"],
   "success_url": "/",
 
   "env": {
