--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "HUNTER-MD",
   "description": "Javascript WhatsApp bot made by ADMIN HUNTER",
-  "logo": "https://github.com/DANUWA-MD/DANUWA-MD/blob/main/images/DANUWA-MD.png?raw=true",
+  "logo": "https://github.com/dasithdamsara01-cmd/HUNTERs_bot/blob/main/images/ChatGPT%20Image%20Feb%2022%2C%202026%2C%2004_30_33%20PM.png",
   "keywords": ["HUNTER-MD"],
   "success_url": "/",
 
